--- a/package.json
+++ b/package.json
@@ -15,18 +15,36 @@
     "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
+    "@babel/eslint-parser": "^7.25.9",
+    "@eslint/js": "^9.16.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.11.0",
+    "globals": "^15.13.0",
     "postcss": "^8.4.49",
+    "standard": "^17.1.2",
     "tailwindcss": "^3.4.15",
     "vite": "^5.4.10"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json",
+    "rules": {
+      "react/prop-types": "off",
+      "quotes": [
+        "error",
+        "single",
+        {
+          "allowTemplateLiterals": true
+        }
+      ],
+      "jsx-quotes": [
+        "error",
+        "prefer-double"
+      ]
+    }
   }
 }
