--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.1"
+    "loadable-image": "3.2.6",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-router-dom": "7.0.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.9",
